<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/alrt_items_menu"
    android:paddingTop="20dp"
    android:paddingBottom="20sp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="21dp"
            android:layout_marginEnd="21dp"
            android:layout_marginRight="21dp"
            android:layout_marginBottom="5dp"
            android:src="@mipmap/noteicon"
            android:background="@drawable/rounded_corners_1"
            android:padding="2dp"/>

        <TextView
            android:layout_marginBottom="8sp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/fade_white"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/app_name"
            android:gravity="bottom|left"/>

    </LinearLayout>

<LinearLayout
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:orientation="horizontal"
    android:layout_margin="8sp">
<ImageView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@drawable/ic_settings_black_24dp"
    android:layout_marginTop="12dp"
    android:layout_marginStart="12dp"
    />

<Button
    android:id="@+id/Thymes"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/Settings"
    android:textAlignment="gravity"
    android:gravity="center_vertical|left"
    android:textColor="@color/fade_white"
    android:background="@color/transparent"
    android:padding="8sp"
    android:textStyle="bold"/>
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="8sp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_info_black_24dp"
            android:layout_marginTop="12dp"
            android:layout_marginStart="12dp" />

<Button
    android:id="@+id/about"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/about"
    android:textAlignment="gravity"
    android:gravity="center_vertical|left"
    android:textColor="@color/fade_white"
    android:background="@color/transparent"
    android:padding="8sp"
    android:textStyle="bold" />
    </LinearLayout>

<!--<Button-->
<!--    android:id="@+id/btn2"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="wrap_content"-->
<!--    android:text="hola"-->
<!--    android:textAlignment="gravity"-->
<!--    android:gravity="center_vertical|left"-->
<!--    android:textColor="@color/fade_white"-->
<!--    android:background="#00ffffff"-->
<!--    android:padding="8sp"-->
<!--    android:textStyle="bold" />-->
<!--<Button-->
<!--    android:id="@+id/btn3"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="wrap_content"-->
<!--    android:text="hola"-->
<!--    android:textAlignment="gravity"-->
<!--    android:gravity="center_vertical|left"-->
<!--    android:textColor="@color/fade_white"-->
<!--    android:background="#00ffffff"-->
<!--    android:padding="8sp"-->
<!--    android:textStyle="bold" />-->
<!--<Button-->
<!--    android:id="@+id/btn4"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="wrap_content"-->
<!--    android:text="hola"-->
<!--    android:textAlignment="gravity"-->
<!--    android:gravity="center_vertical|left"-->
<!--    android:textColor="@color/fade_white"-->
<!--    android:background="#00ffffff"-->
<!--    android:padding="8sp"-->
<!--    android:textStyle="bold" />-->
</LinearLayout>
